# reflex

./: .clang-format  .gitignore  CMakeLists.txt  README.md  info.md
example/: CMakeLists.txt  basic_example.cpp
include/: alias.hpp  capture.hpp  context.hpp  descriptor.hpp  exception.hpp  field.hpp  handle.hpp  hash.hpp  hashed_string.hpp  range.hpp  reflector.hpp  reflex.hpp  serialize.hpp  traits.hpp  type_info.hpp
src/: Alias.hpp  Context.hpp  Field.hpp  StringHash.hpp  alias.hpp  context.hpp  exception.hpp  field.hpp  hash.hpp  main.cpp  reflector.hpp  reflex.hpp  serialize.hpp  string_hash.hpp  traits.hpp  type_info.hpp
test/: CMakeLists.txt  reflex.cpp
